# diffusion-bot-rust

./: .gitignore  Cargo.toml  Dockerfile  flake.nix
src/: activity.rs  commands.rs  main.rs
src/commands/: chat.rs  dream.rs  google_ai.rs  horde.rs  info.rs  nano.rs  stats.rs
src/utils/: embed.rs  mod.rs
