[package]
name = "diffusion-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
dotenv = "0.15.0"
futures = "0.3.25"
reqwest = "0.11.13"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
twilight-cache-inmemory = "0.14.0"
twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-interactions = "0.14.0"
twilight-model = "0.14.0"
twilight-util = { version = "0.14.0", features = ["builder"] }


