[package]
name = "diffusion-bot-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "diffusion-bot-rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
image = { version="0.25.6", features = ["png", "jpeg", "webp"] }
log = "0.4.27"
rand = "0.9.2"
reqwest = { version="0.12.23", features = ["json", "multipart"] }
reqwest-eventsource = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-interactions = "0.16.2"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
twilight-validate = "0.16.0"
